--- a/back/.env
+++ b/back/.env
@@ -1,4 +1,5 @@
-MONGO_URI=mongodb://localhost:27017/study_tracker
+MONGODB_URI=mongodb+srv://qaissi0003_db_user:fAZK4UDluoT5RjFp@Cluster3.8pag1fi.mongodb.net/myapp
+
 JWT_SECRET=your_long_secret
 JWT_EXPIRES_IN=7d
 PORT=3000
